Removed some redundant code # TODO FileManager Functionalities